# grcp-example

./: Cargo.toml  Dockerfile  README.md
deployment/: manifest.yaml
src/: main.rs  server.rs
